src/project/routing-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-svc
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: micro   
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: login-routes
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: login-svc
    port: 80
  
  rules:
  # Redirect to Son's microservice
  - matches:
    - headers:
      - name: Cookie
        value: username=son
    backendRefs:
    - name: hnginx
      port: 80
  
  # Redirect to Yejin's microservice
  - matches:
    - headers:
      - name: Cookie
        value: username=yellowstar
    backendRefs:
    - name: yejinpage
      port: 80

  # Redirect to error page for the following cases
  # Not logged in
  # Wrong user name
  - backendRefs:
    - name: error
      port: 80
